# ml_collection

./: .gitignore  README.md  flake.nix
cpp/: .clang-format  .clangd  Makefile  README.md  compile_commands.json  flake.nix  meson.build  meson_options.txt  test  test.cpp
cpp/.cache/clangd/index/: device.cpp.D53FE32A6D69F215.idx  device.hpp.3C8763395D6D6D8B.idx  hip_timer.cpp.BEB6F8C8F3ABDEB6.idx  hip_timer.hpp.5B6194B7BDCAE58E.idx  hip_utils.hpp.E0663BDECADBC5A7.idx  logger.cpp.6A9B16C798A9AD38.idx  logger.hpp.499EA4B16F27BC80.idx  main.cpp.4393810D1AFA7DFA.idx  storage.cpp.01E68F4E6E115108.idx  storage.hpp.D38D4A6977C4639E.idx  tensor.cpp.E38DFA379A3DD1A8.idx  tensor.hpp.E54D453CC19DD20C.idx
cpp/pso/: Makefile  README.md  main.cpp
cpp/pso/array/: device_array.hpp  dual_array.hpp  host_array.hpp  nd_array.hpp
cpp/pso/ops/: fill.cpp
cpp/pso/ops/reduce/: 1d.hpp  ops.hpp
cpp/pso/pso/: particles.hpp  pso.hpp  space.hpp  topology.hpp
cpp/pso/src/: main.cpp
cpp/pso/src/array/: nd_array.hpp  (+4 more)
cpp/pso_simplified/: array.hpp  eval_function.hpp  main.cpp  pso.hip  pso.hpp  pso_O0.hip
cpp/src/: main.cpp
cpp/src/array/: device_array.hpp  nd_array.hpp  synced_array.hpp  utils.hpp
cpp/src/ops/: fill.cpp
cpp/src/pso/: eval_function.hpp  particles.hpp  pso.hpp  space.hpp
cpp/src/tensor/: device.cpp  device.hpp  storage.cpp  storage.hpp  tensor.cpp  tensor.hip  tensor.hpp  tensor_iter.hpp
cpp/src/utils/: hip_timer.cpp  hip_timer.hpp  hip_utils.h  hip_utils.hpp  logger.cpp  logger.hpp
cpp/test/: t  test.cpp
cpp/utils/: hip_timer.cpp  hip_utils.hpp  logger.hpp
(+30 files in other folders)
